# simple-join-server

./: .gitignore  Cargo.toml  Cross.toml  Makefile  README.md  shell.nix  simple-join-server.toml
migrations/2025-07-21-094906_initial/: down.sql  up.sql
src/: api.rs  config.rs  errors.rs  helpers.rs  keys.rs  main.rs  schema.rs  storage.rs  structs.rs  test.rs
src/cmd/: configfile.rs  simple-join-server.toml
