[package]
  name = "simple-join-server"
  version = "1.0.0"
  edition = "2021"

[dependencies]
  anyhow = "1.0"
  thiserror = "2.0"
  clap = { version = "4.5", features = ["derive"] }
  tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "fs"] }
  tokio-postgres = { version = "0.7" }
  tokio-postgres-rustls = { version = "0.13" }
  aes = "0.8"

  uuid = { version = "1.19", default-features = false, features = [
    "v4",
    "serde",
  ] }
  diesel = { version = "2.3", features = [
    "postgres_backend",
    "uuid",
    "serde_json",
  ] }
  diesel_migrations = { version = "2.3" }
  diesel-async = { version = "0.7", features = [
    "deadpool",
    "postgres",
    "async-connection-wrapper",
  ] }
  serde = { version = "1.0", features = ["derive", "rc"] }
  serde_json = "1.0"
  lrwn = { version = "4.13", features = [
    "serde",
    "diesel",
    "crypto",
    "postgres",
  ] }
  toml = "0.9"
  tracing = "0.1"
  tracing-subscriber = "0.3"
  axum = "0.8"
  axum-server = { version = "0.7", features = ["tls-rustls-no-provider"] }
  futures = "0.3"
  rustls = { version = "0.23", default-features = false, features = [
    "logging",
    "std",
    "tls12",
    "ring",
  ] }
  rustls-native-certs = "0.8"
  rustls-pemfile = "2.2"
  scoped-futures = { version = "0.1", features = ["std"] }
  hex = "0.4"
  handlebars = "6.3"
